--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Karibu WebProject E-Learning</h1>
     <a href="register.php">Register as Student</a><br>
-    <a href="login.php">Login</a>
+    <a href="login.html">Login</a>
 </body>
 </html>
