--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Karibu WebProject E-Learning</h1>
-    <a href="register.php">Register as Student</a><br>
+    <a href="register.html">Register as Student</a><br>
     <a href="login.html">Login</a>
 </body>
 </html>
